@@ -39,6 +39,7 @@
 #  include <itpp/config_msvc.h>
 #endif
 
+#include <sstream>
 #include <string>
 
 
@@ -81,30 +82,59 @@ namespace itpp {
   //! Redirect warnings to the ostream warn_stream
   void it_redirect_warnings(std::ostream *warn_stream);
 
+
+#define it_assert_base(t,s) \
+if(!(t)) { \
+  std::ostringstream m_sout; \
+  m_sout << s; \
+  itpp::it_assert_f(#t,m_sout.str(),__FILE__,__LINE__); \
+} else \
+  void(0)
+
 #if ASSERT_LEVEL==0 // No tests
-#  define it_assert0(t,s) ((void)0)
-#  define it_assert1(t,s) ((void)0)
+#  define it_assert0(t,s) void(0)
+#  define it_assert1(t,s) void(0)
 #elif ASSERT_LEVEL==1 // Only some tests
-#  define it_assert0(t,s) ((void)0)
-#  define it_assert1(t,s) (void)((t) || (itpp::it_assert_f(#t,s,__FILE__,__LINE__),0))
+#  define it_assert0(t,s) void(0)
+#  define it_assert1(t,s) it_assert_base(t,s)
 #else // Full tests
   //! Abort if \c t is not true and IT++ is compiled with \c -DASSERT_LEVEL=2
   //! The message string \c s is printed on standard output.
-#  define it_assert0(t,s) (void)((t) || (itpp::it_assert_f(#t,s,__FILE__,__LINE__),0))
+#  define it_assert0(t,s) it_assert_base(t,s)
   //! Abort if \c t is not true and IT++ is compiled with \c -DASSERT_LEVEL=1 
   //! or \c -DASSERT_LEVEL=2. The message string \c s is printed on standard 
   //! output. 
-#  define it_assert1(t,s) (void)((t) || (itpp::it_assert_f(#t,s,__FILE__,__LINE__),0))
+#  define it_assert1(t,s) it_assert_base(t,s)
 #endif // ASSERT_LEVEL
+  //! Abort if \c t is not true and output \c s
+#define it_assert(t,s) it_assert_base(t,s)
 
-  //! Abort if \c t is NOT true and output \c s
-#define it_assert(t,s) (void)((t) || (itpp::it_assert_f(#t,s,__FILE__,__LINE__),0))
   //! Abort if \c t is true and output \c s
-#define it_error_if(t,s) (void)((!(t)) || (itpp::it_error_f(s,__FILE__,__LINE__),0))
+#define it_error_if(t,s) \
+if((t)) { \
+  std::ostringstream m_sout; \
+  m_sout << s; \
+  itpp::it_error_f(m_sout.str(),__FILE__,__LINE__); \
+} else \
+  void(0)
+
   //! Abort and output \c s
-#define it_error(s) itpp::it_error_f(s,__FILE__,__LINE__)
+#define it_error(s) \
+if (true) { \
+  std::ostringstream m_sout; \
+  m_sout << s; \
+  itpp::it_error_f(m_sout.str(),__FILE__,__LINE__); \
+} else \
+  void(0)
+
   //! Output the warning \c s
-#define it_warning(s) itpp::it_warning_f(s,__FILE__,__LINE__)
+#define it_warning(s) \
+if (true) { \
+  std::ostringstream m_sout; \
+  m_sout << s; \
+  itpp::it_warning_f(m_sout.str(),__FILE__,__LINE__); \
+} else \
+  void(0)
 
   //!@}
 
